--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,29 @@ typings/
 
 # next.js build output
 .next
+
+# Created by https://www.gitignore.io/api/sbt,scala
+
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+
+### Scala ###
+*.class
+*.log
+
+
+# End of https://www.gitignore.io/api/sbt,scala
+
+#UI dependencies
+Word2Vec-web/public/vendor/*
