--- a/Word2Vec-web/package.json
+++ b/Word2Vec-web/package.json
@@ -11,10 +11,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-load": "^1.1.16",
-    "method-override": "^3.0.0",
-    "request": "^2.88.0"
+    "method-override": "^3.0.0"
   }
 }
